--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,24 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=ABeeZee&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "ABeeZee", sans-serif;
+  color: #333;
+}
+select,
+input,
+button,
+label {
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+}
+button,
+select {
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
