--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,9 @@ $colors: (
   danger: #e50909,
   spinner: rgba(51, 51, 51, 0.5),
   bg-loader: rgba(211, 211, 211, 0.5),
+  light-dark-night: lighten(#333, 15%),
+  light-dark: lighten(#333, 10%),
+  light-night: lighten(#333, 20%),
 );
 $transitions: (
   sudden: 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275),
@@ -23,14 +26,26 @@ $transitions: (
   background-color: white;
   width: 400px;
   padding: 20px;
-  position: relative;
+  position: absolute;
   max-width: 100%;
   border-radius: 5px;
+  transition: getTransition(sudden);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2), 0px 14px 15px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  visibility: hidden;
+  z-index: 8;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  &--open {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
+  }
   &__title {
     font-size: 2em;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-weight: normal;
   }
   &__container-fields {
@@ -39,11 +54,12 @@ $transitions: (
     display: none;
   }
   &__container-btns {
-    width: 260px;
+    width: 248px;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    padding-top: 5px;
+    padding-top: 15px;
   }
   &__loader {
     position: absolute;
@@ -199,5 +215,147 @@ $transitions: (
     &--warning {
       border-color: getColor(danger);
     }
+  }
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: getColor(dark);
+  z-index: 8;
+  &__menu {
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+  }
+  &__link {
+    color: getColor(secondary);
+    text-decoration: none;
+    padding: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: getTransition(smooth);
+    background-color: getColor(dark);
+    border-left: 1px solid getColor(light-dark-night);
+    border-right: 1px solid transparent;
+    &:hover {
+      color: white;
+    }
+    &--active {
+      background-color: getColor(light-dark);
+      color: white;
+    }
+  }
+  &__logo-link {
+    padding: 0 10px;
+    margin-right: auto;
+    border: none;
+    &:hover {
+      color: getColor(secondary);
+    }
+  }
+  &__logo {
+    font-size: 1.9em;
+  }
+  &__link-name {
+    margin-left: 7px;
+  }
+  &__search {
+    width: 500px;
+    max-width: 100%;
+    display: flex;
+    margin: 0px 10px;
+    margin-right: auto;
+    border-radius: 4px;
+    overflow: hidden;
+  }
+  &__search-input {
+    flex: 1;
+    padding: 4px 7px;
+    border: none;
+    background-color: getColor(light-night);
+    color: white;
+    outline-width: 1px;
+    outline-color: grey;
+    &::placeholder {
+      color: lightgrey;
+    }
+  }
+  &__search-btn {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    background-color: getColor(light-night);
+    color: lightgrey;
+    & > * {
+      margin: auto;
+    }
+  }
+  &__container-drop {
+    position: relative;
+  }
+  &__btn {
+    padding: 8px 10px;
+    .nav__link-name {
+      max-width: 70px;
+      overflow: hidden;
+      height: 22px;
+    }
+  }
+  &__container-img {
+    display: block;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  &__drop-menu {
+    right: 0;
+    width: 150px;
+    position: absolute;
+    background-color: getColor(dark);
+    transition: getTransition(smooth);
+    border-top: 1px solid getColor(light-dark-night);
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-30%) scale(0.9);
+    z-index: -1;
+    &--open {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0%) scale(1);
+    }
+    .nav__link {
+      width: 100%;
+      border: none;
+      border-bottom: 1px solid getColor(light-dark-night);
+    }
+  }
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: getColor(bg-loader);
+  visibility: hidden;
+  transition: getTransition(smooth);
+  opacity: 0;
+  z-index: 7;
+  &--active {
+    visibility: visible;
+    opacity: 1;
   }
 }
