--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=ABeeZee&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Tajawal&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: "ABeeZee", sans-serif;
+  /* font-family: "ABeeZee", sans-serif; */
+  font-family: "Tajawal", sans-serif;
   color: #333;
 }
 select,
