--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ body {
   /* font-family: "ABeeZee", sans-serif; */
   font-family: "Tajawal", sans-serif;
   color: #333;
+  background-color: #eeee;
 }
 select,
 input,
