--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -46,10 +46,16 @@ $transitions: (
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
+  .field {
+    visibility: hidden;
+  }
   &--open {
     opacity: 1;
     visibility: visible;
     transform: translate(-50%, -50%) scale(1);
+    .field {
+      visibility: visible;
+    }
   }
   &__title {
     font-size: 2em;
@@ -139,7 +145,7 @@ $transitions: (
   display: block;
   margin-bottom: 15px;
   transition: getTransition(smooth);
-  height: 60.38px;
+  height: 66.38px;
   position: relative;
   visibility: visible;
   opacity: 1;
@@ -154,11 +160,9 @@ $transitions: (
   }
   &__container-info {
     display: flex;
-
     align-items: center;
     justify-content: space-between;
     padding: 3px 0;
-    background-color: white;
   }
   &__name {
     text-transform: capitalize;
@@ -216,7 +220,11 @@ $transitions: (
     right: -16px;
     top: 50%;
   }
-  &__input {
+  &__msg-info {
+    width: 130px;
+    z-index: 10;
+  }
+  %field {
     width: 100%;
     transition: getTransition(smooth);
     padding: 7px;
@@ -224,10 +232,72 @@ $transitions: (
     border-radius: 4px;
     background-color: getColor(secondary);
     outline-color: grey;
+  }
+  &__input {
+    @extend %field;
     &--warning {
       border-color: getColor(danger);
     }
   }
+  &__textarea {
+    min-height: 150px;
+    resize: vertical;
+    max-height: 200px;
+    width: 100%;
+    @extend %field;
+  }
+  &__select {
+    width: 50%;
+    background-color: getColor(primary);
+    color: white;
+    padding: 10px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+  &__option {
+    background-color: white;
+    color: getColor(dark);
+  }
+  &__label-file {
+    width: 50%;
+    background-color: getColor(primary);
+    color: white;
+    padding: 11px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    cursor: pointer;
+  }
+  &__input-handler {
+    display: none;
+  }
+}
+.field-select {
+  display: flex;
+  height: auto;
+  height: 44px;
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  &--close {
+    opacity: 0;
+    height: 0;
+    visibility: hidden;
+    margin: 0;
+    transform: scale(0.7);
+    .field__container-msg {
+      visibility: hidden;
+    }
+  }
+  .field__container-info {
+    width: 50%;
+    padding: 0px 10px;
+    border: 1px solid lightgrey;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+}
+.field-custom-height {
+  height: auto !important;
 }
 
 .nav {
@@ -392,7 +462,14 @@ $transitions: (
 }
 
 .form {
+  display: flex;
+  margin-top: 15px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 12px 15px rgba(0, 0, 0, 0.1);
   &__main-side {
+    width: 50%;
+    padding: 20px;
   }
   &__container-fields {
   }
@@ -400,7 +477,21 @@ $transitions: (
     display: none;
   }
   &__container-btns {
+    display: flex;
+    align-items: center;
   }
   &__bg-side {
+    width: 50%;
+    background-image: linear-gradient(
+      135deg,
+      rgba(251, 0, 255, 0.4),
+      rgba(0, 218, 222, 0.4)
+    );
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
+    transform: scale(0.8);
+    filter: drop-shadow(0px 7px 8px rgba(0, 0, 0, 0.3));
   }
 }
