--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -31,6 +31,127 @@ $transitions: (
   min-height: 100vh;
 }
 
+.main {
+  display: flex;
+  min-height: 100vh;
+  position: relative;
+  &__bg-content {
+    width: 50%;
+    background-image: repeating-linear-gradient(
+        135deg,
+        rgba(0, 0, 0, 0.03) 0px,
+        rgba(0, 0, 0, 0.03) 1px,
+        transparent 1px,
+        transparent 31px,
+        rgba(0, 0, 0, 0.03) 31px,
+        rgba(0, 0, 0, 0.03) 32px,
+        transparent 32px,
+        transparent 92px
+      ),
+      repeating-linear-gradient(
+        45deg,
+        rgba(0, 0, 0, 0.03) 0px,
+        rgba(0, 0, 0, 0.03) 1px,
+        transparent 1px,
+        transparent 31px,
+        rgba(0, 0, 0, 0.03) 31px,
+        rgba(0, 0, 0, 0.03) 32px,
+        transparent 32px,
+        transparent 92px
+      ),
+      repeating-linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0.03) 0px,
+        rgba(0, 0, 0, 0.03) 1px,
+        transparent 1px,
+        transparent 31px,
+        rgba(0, 0, 0, 0.03) 31px,
+        rgba(0, 0, 0, 0.03) 32px,
+        transparent 32px,
+        transparent 92px
+      ),
+      linear-gradient(90deg, hsl(344, 0%, 100%), hsl(344, 0%, 100%));
+  }
+  &__bg-background {
+    width: 50%;
+    background-image: radial-gradient(
+        circle at top left,
+        rgba(218, 67, 67, 0.3) 23%,
+        rgba(228, 195, 46, 0.4) 23%,
+        rgba(225, 50, 207, 0.3) 55%,
+        rgba(181, 40, 40, 0.5) 55%,
+        rgba(231, 225, 55, 0.4) 80%,
+        rgba(202, 41, 223, 0.3) 80%,
+        rgba(216, 30, 98, 0.3) 86%,
+        rgba(213, 30, 91, 0.4) 86%,
+        rgba(218, 41, 135, 0.3) 96%,
+        rgba(154, 20, 98, 0.5) 96%,
+        rgba(196, 20, 20, 0.3) 100%
+      ),
+      linear-gradient(135deg, rgba(169, 23, 23, 0.4), rgba(233, 172, 41, 0.4));
+  }
+  &__container-content {
+    position: absolute;
+    width: 1200px;
+    max-width: 100%;
+    padding: 48px 50px 20px 50px;
+    min-height: 100vh;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+  }
+  &__content {
+    width: 50%;
+    padding: 0px 20px;
+    padding-right: 7vw;
+    min-height: 35vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid lightgrey;
+    border-left: none;
+    border-right: none;
+  }
+  &__title {
+    display: flex;
+    padding: 5px;
+    border-radius: 4px;
+    align-items: center;
+    font-size: 3em;
+    background-color: getColor(bg-loader);
+  }
+  &__name {
+    margin-left: 15px;
+  }
+  &__icon {
+    font-size: 1.2em;
+  }
+  &__paragraph {
+    position: relative;
+    font-size: 1.5em;
+    right: 30px;
+    line-height: 30px;
+    border-left: 1px solid lightgrey;
+    padding-left: 30px;
+  }
+  &__container-btns {
+    display: flex;
+    width: 290px;
+    justify-content: space-between;
+  }
+  &__bg-img {
+    width: 50%;
+    padding: 0px 20px;
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transform: scale(1.35);
+    filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.8));
+  }
+}
 .auth-form {
   background-color: white;
   width: 400px;
@@ -131,6 +252,7 @@ $transitions: (
   }
   &:active {
     box-shadow: none;
+    transform: scale(0.9);
   }
 }
 .btn-primary {
@@ -139,6 +261,13 @@ $transitions: (
 }
 .btn-simple {
   background-color: getColor(secondary);
+}
+.link {
+  text-decoration: none;
+  color: getColor(dark);
+  border: 1px solid lightgrey;
+  box-shadow: none;
+  background-color: white;
 }
 
 .field {
