--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -550,7 +550,7 @@ $transitions: (
     }
     .nav__link {
       width: 100%;
-      border: none;
+      border-left: none !important;
       border-bottom: 1px solid getColor(light-dark-night);
     }
   }
@@ -622,5 +622,63 @@ $transitions: (
     height: 100%;
     transform: scale(0.8);
     filter: drop-shadow(0px 7px 8px rgba(0, 0, 0, 0.3));
+  }
+}
+
+.categories {
+  margin-top: 15px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 30px;
+  &__link {
+    position: relative;
+    border-radius: 4px;
+    transition: getTransition(smooth);
+    transform: scale(1);
+    background-image: linear-gradient(
+      135deg,
+      rgba(51, 181, 201, 0.5),
+      rgba(255, 21, 0, 0.5)
+    );
+    overflow: hidden;
+    &:hover .categories__name {
+      background-color: getColor(dark);
+      color: white;
+    }
+    &:hover {
+      transform: scale(1.1);
+      z-index: 5;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1), 0px 5px 5px rgba(0, 0, 0, 0.1);
+    }
+    &:nth-child(even) {
+      background-image: linear-gradient(
+        135deg,
+        rgba(168, 201, 51, 0.5),
+        rgba(211, 35, 202, 0.5)
+      );
+    }
+  }
+  &__name {
+    position: absolute;
+    display: block;
+    width: 100%;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    z-index: 2;
+    text-align: center;
+    transition: getTransition(smooth);
+    color: getColor(dark);
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 2px 0;
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transform: scale(0.85);
+    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.8));
   }
 }
