--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ body {
   /* font-family: "ABeeZee", sans-serif; */
   font-family: "Tajawal", sans-serif;
   color: #333;
-  background-color: #eeee;
+  background-color: rgb(248, 248, 248);
 }
 select,
 input,
