--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 /* @import url("https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"); */
-@import url("https://fonts.googleapis.com/css2?family=Tajawal&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Tajawal&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +8,8 @@
 }
 body {
   /* font-family: "ABeeZee", sans-serif; */
-  font-family: "Tajawal", sans-serif;
+  /* font-family: "Tajawal", sans-serif; */
+  font-family: "Quicksand", sans-serif;
   color: #333;
   background-color: rgb(248, 248, 248);
 }
