--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body {
   /* font-family: "Tajawal", sans-serif; */
   font-family: "Quicksand", sans-serif;
   color: #333;
-  background-color: rgb(248, 248, 248);
+  /* background-color: rgb(248, 248, 248); */
 }
 select,
 input,
