--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,6 @@
 $colors: (
   primary: #4287f5,
-  secondary: rgba(220, 220, 220, 1),
+  secondary: rgb(202, 202, 202),
   dark: #333,
   danger: #e50909,
   spinner: rgba(51, 51, 51, 0.5),
@@ -8,7 +8,8 @@ $colors: (
   light-dark-night: lighten(#333, 15%),
   light-dark: lighten(#333, 10%),
   light-night: lighten(#333, 20%),
-  main: rgba(0, 0, 0, 0.05),
+  main: rgba(0, 0, 0, 0.1),
+  accent: rgba(255, 255, 255, 0.7),
 );
 %main-background {
   background-image: repeating-linear-gradient(
@@ -96,7 +97,7 @@ $transitions: (
   }
   &__container-content {
     position: absolute;
-    width: 1200px;
+    width: 1300px;
     max-width: 100%;
     padding: 48px 50px 20px 50px;
     min-height: 100vh;
@@ -113,9 +114,9 @@ $transitions: (
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border: 1px solid lightgrey;
-    border-left: none;
-    border-right: none;
+    // border: 1px solrgb(39, 15, 15)rey;
+    // border-left: none;
+    // border-right: none;
   }
   &__title {
     display: flex;
@@ -141,7 +142,7 @@ $transitions: (
   }
   &__container-btns {
     display: flex;
-    width: 290px;
+    width: 300px;
     justify-content: space-between;
   }
   &__bg-img {
@@ -152,7 +153,7 @@ $transitions: (
     width: 100%;
     height: 100%;
     object-fit: contain;
-    transform: scale(1.35);
+    transform: scale(1.2) translateX(-30px);
     filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.8));
   }
 }
@@ -583,6 +584,7 @@ $transitions: (
     display: flex;
     align-items: center;
     padding-bottom: 5px;
+    font-weight: bold;
   }
   &__icon {
     font-size: 0.9em;
@@ -608,7 +610,14 @@ $transitions: (
     border-bottom-right-radius: 4px;
   }
 }
-
+.title-simple {
+  .title__container-name {
+    border-bottom-color: transparent;
+  }
+  .title__description {
+    border-top-left-radius: 7px;
+  }
+}
 .form {
   display: flex;
   margin-top: 15px;
@@ -708,6 +717,7 @@ $transitions: (
     text-decoration: none;
     transition: getTransition(smooth);
     border: 1px solid getColor(secondary);
+    color: getColor(dark);
     border-radius: 5px;
     // box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05), 0px 4px 5px rgba(0, 0, 0, 0.1);
     &:hover {
@@ -729,9 +739,25 @@ $transitions: (
     object-fit: cover;
     padding: 13px;
   }
+  &__plug-image {
+    color: getColor(secondary);
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  &__plug-name {
+  }
+  &__plug-icon {
+    font-size: 6em;
+  }
   &__container-title {
     padding: 10px 15px;
-    color: getColor(dark);
+    // color: getColor(dark);
     height: 64px;
     overflow: hidden;
     border-top: 1px solid getColor(secondary);
@@ -742,15 +768,17 @@ $transitions: (
     right: 0;
     padding: 5px;
   }
+  &__grivna-sign {
+    color: grey;
+  }
   &__price,
   &__date {
     position: absolute;
     z-index: 3;
-    color: white;
     position: absolute;
     border: 3px solid white;
     border-radius: 4px;
-    background-color: getColor(secondary);
+    background-color: lighten(getColor(secondary), 7%);
   }
   &__title {
   }
@@ -764,16 +792,18 @@ $transitions: (
 
 .details-ad {
   display: flex;
-  margin-top: 15px;
+  margin-top: -28px;
+
   &__container-imgs {
     width: 55%;
     border: 1px solid getColor(secondary);
     border-right: none;
     border-top-left-radius: 7px;
     border-bottom-left-radius: 7px;
+    // box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1), 0px 10px 12px rgba(0, 0, 0, 0.1);
   }
   &__container-preview {
-    height: 59vh;
+    height: 65vh;
     position: relative;
   }
   &__preview-img {
@@ -781,6 +811,9 @@ $transitions: (
     height: 100%;
     object-fit: contain;
     transform: scale(0.85);
+    // border-radius: 5px;
+    // overflow: hidden;
+    // // border: 1px solid getColor(secondary);
   }
   &__move-btn {
     position: absolute;
@@ -821,15 +854,12 @@ $transitions: (
   }
   &__container-imgtabs {
     display: flex;
+    min-height: 161px;
     padding: 30px 5vw;
     border-top: 1px solid getColor(secondary);
-    // border-top: none;
     align-items: center;
     justify-content: center;
-    // background-color: rgba(255, 255, 255, 0.2);
     background-color: getColor(main);
-    backdrop-filter: blur(2px);
-    // background-color: getColor(secondary);
   }
   &__container-info {
     width: 45%;
@@ -843,6 +873,7 @@ $transitions: (
     //   0px 12px 15px rgba(0, 0, 0, 0.1);
     border: 1px solid getColor(secondary);
     // border-left: none;
+    // box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1), 0px 10px 12px rgba(0, 0, 0, 0.1);
   }
   &__tab-btn {
     height: 100px;
@@ -869,14 +900,14 @@ $transitions: (
   }
   &__title {
     font-size: 1.3em;
-    font-weight: normal;
+    // font-weight: bold;
     // text-align: center;
     margin-bottom: 20px;
     padding: 10px;
     // height: 60px;
     // overflow-y: auto;
     border-radius: 4px;
-    border: 5px solid white;
+    // border: 5px solid white;
     // background-color: white;
   }
   &__container-price {
@@ -897,24 +928,30 @@ $transitions: (
     // background-color: white;
     // border: 1px solid white;
     // background-color: rgba(255, 255, 255, 0.5);
-    border: 5px solid white;
+    // border: 5px solid white;
+    background-color: getColor(accent);
     // box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.3),
     //   inset 0px 0px 7px rgba(0, 0, 0, 0.15);
   }
   &__description-title {
-    font-size: 1.3em;
-    margin-bottom: 10px;
+    font-size: 1.1em;
+    margin-bottom: 5px;
   }
   &__description {
     padding: 10px;
     font-size: 1.05em;
     // border: 1px solid white;
-    height: 22vh;
+    // width: 109%;
+    // border: 5px solid white;
+    // box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2), 0px 1px 4px rgba(0, 0, 0, 0.2),
+    //   0px 6px 6px rgba(0, 0, 0, 0.1);
+    height: 25vh;
     overflow-y: auto;
     margin-bottom: 15px;
     border-radius: 4px;
-    // background-color: rgba(255, 255, 255, 0.5);
-    border: 5px solid white;
+    background-color: getColor(accent);
+    // border: 5px solid white;
+    // background-color: getColor(accent);
     // box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.3),
     //   inset 0px 0px 7px rgba(0, 0, 0, 0.15);
   }
@@ -929,7 +966,7 @@ $transitions: (
     display: flex;
     flex-direction: column;
     &:first-child {
-      margin-right: 5px;
+      margin-right: 13px;
       // border: none;
     }
   }
@@ -951,9 +988,9 @@ $transitions: (
   }
   &__date {
     // border: 1.3px dashed lightgrey;
-    // background-color: rgba(255, 255, 255, 0.5);
-    padding: 10px 0;
-    border: 5px solid white;
+    background-color: getColor(accent);
+    padding: 15px 0;
+    // border: 5px solid white;
   }
   &__container-row-user {
     // position: absolute;
