--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,7 +2,9 @@ $colors: (
   primary: #4287f5,
   secondary: rgb(202, 202, 202),
   dark: #333,
-  danger: #e50909,
+  danger: #d34545,
+  success: rgb(52, 174, 52),
+  warning: rgb(255, 174, 0),
   spinner: rgba(51, 51, 51, 0.5),
   bg-loader: rgba(211, 211, 211, 0.5),
   light-dark-night: lighten(#333, 15%),
@@ -10,6 +12,7 @@ $colors: (
   light-night: lighten(#333, 20%),
   main: rgba(0, 0, 0, 0.1),
   accent: rgba(255, 255, 255, 0.7),
+  main-solid: rgb(230, 230, 230),
 );
 %main-background {
   background-image: repeating-linear-gradient(
@@ -257,7 +260,7 @@ $transitions: (
   }
   &:active {
     box-shadow: none;
-    transform: scale(0.9);
+    transform: scale(0.95);
   }
 }
 .btn-primary {
@@ -265,7 +268,21 @@ $transitions: (
   background-color: getColor(primary);
 }
 .btn-simple {
-  background-color: getColor(secondary);
+  background-color: white;
+  border: 1px solid getColor(secondary);
+  box-shadow: none;
+}
+.btn-succcess {
+  background-color: getColor(success);
+  color: white;
+}
+.btn-warning {
+  background-color: getColor(warning);
+  color: white;
+}
+.btn-danger {
+  background-color: getColor(danger);
+  color: white;
 }
 .link {
   text-decoration: none;
@@ -284,6 +301,7 @@ $transitions: (
   visibility: visible;
   opacity: 1;
   z-index: 2;
+
   &--close {
     margin: 0;
     height: 0;
@@ -308,6 +326,7 @@ $transitions: (
     transition: getTransition(smooth);
     opacity: 1;
     visibility: visible;
+
     &:hover {
       .field__msg {
         visibility: visible;
@@ -362,9 +381,10 @@ $transitions: (
     width: 100%;
     transition: getTransition(smooth);
     padding: 7px;
-    border: 1.2px solid lightgrey;
+    border: none;
+    border: 1px solid getColor(secondary);
     border-radius: 4px;
-    background-color: getColor(secondary);
+    background-color: white;
     outline-color: grey;
   }
   &__input {
@@ -374,9 +394,9 @@ $transitions: (
     }
   }
   &__textarea {
-    min-height: 150px;
-    resize: vertical;
-    max-height: 200px;
+    resize: none;
+    min-height: 21vh;
+    max-height: 21vh;
     width: 100%;
     @extend %field;
   }
@@ -384,9 +404,7 @@ $transitions: (
     width: 50%;
     background-color: getColor(primary);
     color: white;
-    padding: 10px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    padding: 0px 10px;
   }
   &__option {
     background-color: white;
@@ -396,9 +414,6 @@ $transitions: (
     width: 50%;
     background-color: getColor(primary);
     color: white;
-    padding: 11px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
     cursor: pointer;
   }
   &__input-handler {
@@ -412,6 +427,7 @@ $transitions: (
   opacity: 1;
   visibility: visible;
   transform: scale(1);
+
   &--close {
     opacity: 0;
     height: 0;
@@ -425,7 +441,7 @@ $transitions: (
   .field__container-info {
     width: 50%;
     padding: 0px 10px;
-    border: 1px solid lightgrey;
+    border: 1px solid getColor(secondary);
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
   }
@@ -578,6 +594,8 @@ $transitions: (
   }
 }
 .title {
+  position: relative;
+  z-index: 5;
   &__container-name {
     font-size: 1.4em;
     border-bottom: 1px solid getColor(secondary);
@@ -605,9 +623,9 @@ $transitions: (
     padding: 5px;
     border-top: none;
     font-size: 0.85em;
-    background-color: getColor(main);
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    background-color: getColor(main-solid);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
 }
 .title-simple {
@@ -615,18 +633,24 @@ $transitions: (
     border-bottom-color: transparent;
   }
   .title__description {
-    border-top-left-radius: 7px;
+    border-top: 1px solid getColor(secondary);
+    border-top-left-radius: 6px;
   }
 }
 .form {
   display: flex;
-  margin-top: 15px;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 12px 15px rgba(0, 0, 0, 0.1);
+  margin-top: -29.5px;
+  // border-radius: 7px;
+  // overflow: hidden;
+  // box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 12px 15px rgba(0, 0, 0, 0.1);
   &__main-side {
     width: 50%;
     padding: 20px;
+    padding-top: 40px;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+    border: 1px solid getColor(secondary);
+    background-color: getColor(main);
   }
   &__container-fields {
   }
@@ -636,19 +660,21 @@ $transitions: (
   &__container-btns {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 220px;
+    padding-top: 10px;
   }
   &__bg-side {
     width: 50%;
-    background-image: linear-gradient(
-      135deg,
-      rgba(251, 0, 255, 0.4),
-      rgba(0, 218, 222, 0.4)
-    );
+    border: 1px solid getColor(secondary);
+    border-left: none;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
   }
   &__image {
     width: 100%;
     height: 100%;
-    transform: scale(0.8);
+    transform: scale(0.9);
     filter: drop-shadow(0px 7px 8px rgba(0, 0, 0, 0.3));
   }
 }
@@ -792,8 +818,7 @@ $transitions: (
 
 .details-ad {
   display: flex;
-  margin-top: -28px;
-
+  margin-top: -29.5px;
   &__container-imgs {
     width: 55%;
     border: 1px solid getColor(secondary);
@@ -1081,6 +1106,7 @@ $transitions: (
     left: -25px;
     position: absolute;
     transition: getTransition(smooth);
+    z-index: 5;
     &:hover {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05),
         0px 3px 3px rgba(0, 0, 0, 0.1);
