--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,6 +13,7 @@ $colors: (
   main: rgba(0, 0, 0, 0.1),
   accent: rgba(255, 255, 255, 0.7),
   main-solid: rgb(230, 230, 230),
+  bg-danger: rgba(241, 42, 42, 0.2),
 );
 %main-background {
   background-image: repeating-linear-gradient(
@@ -161,9 +162,8 @@ $transitions: (
   }
 }
 .auth-form {
-  background-color: white;
   width: 400px;
-  padding: 20px;
+  padding-bottom: 20px;
   position: absolute;
   max-width: 100%;
   border-radius: 5px;
@@ -175,6 +175,7 @@ $transitions: (
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
+  background-color: getColor(accent);
   .field {
     visibility: hidden;
   }
@@ -189,10 +190,20 @@ $transitions: (
   &__title {
     font-size: 2em;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    color: white;
     font-weight: normal;
+    border: 1px solid getColor(secondary);
+    padding: 13px 20px;
+    border-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    background-color: getColor(main);
+    backdrop-filter: blur(4px);
+    position: relative;
   }
   &__container-fields {
+    padding: 0px 20px;
   }
   &__btn-handler {
     display: none;
@@ -203,7 +214,7 @@ $transitions: (
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    padding-top: 15px;
+    padding-top: 10px;
   }
   &__loader {
     position: absolute;
@@ -216,6 +227,8 @@ $transitions: (
     background-color: getColor(bg-loader);
     opacity: 0;
     visibility: hidden;
+    border-radius: 5px;
+    backdrop-filter: blur(4px);
     &--active {
       opacity: 1;
       visibility: visible;
@@ -232,6 +245,14 @@ $transitions: (
     animation: spin getTransition(spin);
     width: 100px;
     height: 100px;
+  }
+  &__btn {
+    position: absolute !important;
+    top: 0;
+    right: 0;
+    // padding:
+    border: 1px solid black;
+    border-radius: 50% !important;
   }
   @keyframes spin {
     from {
@@ -250,10 +271,37 @@ $transitions: (
   padding: 15px;
   border-radius: 4px;
   transition: getTransition(smooth);
+  position: relative;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05), 0px 4px 5px rgba(0, 0, 0, 0.1);
   &__name,
   &__icon {
     margin: 0px 5px;
+  }
+  &__msg {
+    position: absolute;
+    background-color: getColor(dark);
+    color: white;
+    z-index: 4;
+    width: 100px;
+    font-size: 0.8em;
+    padding: 5px;
+    border-radius: 4px;
+    text-align: center;
+    transition: getTransition(sudden);
+    top: -35px;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(0, -20%);
+  }
+  &__triangle {
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border: 8px solid transparent;
+    border-top-color: getColor(dark);
+    transform: translateX(-50%);
+    bottom: -16px;
+    left: 50%;
   }
   &:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05), 0px 3px 3px rgba(0, 0, 0, 0.1);
@@ -283,6 +331,22 @@ $transitions: (
 .btn-danger {
   background-color: getColor(danger);
   color: white;
+}
+.btn-disabled {
+  background-color: getColor(main);
+  color: white;
+  box-shadow: none;
+  &:hover {
+    box-shadow: none;
+    .btn__msg {
+      visibility: visible;
+      opacity: 1;
+      transform: translate(0, 0%);
+    }
+  }
+  &:active {
+    transform: none;
+  }
 }
 .link {
   text-decoration: none;
@@ -354,7 +418,6 @@ $transitions: (
     font-size: 0.8em;
     padding: 5px;
     border-radius: 4px;
-    position: realtive;
     right: 26px;
     text-align: center;
     transition: getTransition(sudden);
@@ -583,7 +646,7 @@ $transitions: (
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: getColor(bg-loader);
+  background-color: getColor(spinner);
   visibility: hidden;
   transition: getTransition(smooth);
   opacity: 0;
@@ -624,8 +687,8 @@ $transitions: (
     border-top: none;
     font-size: 0.85em;
     background-color: getColor(main-solid);
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
   }
 }
 .title-simple {
@@ -635,6 +698,7 @@ $transitions: (
   .title__description {
     border-top: 1px solid getColor(secondary);
     border-top-left-radius: 6px;
+    border-bottom-left-radius: 0px;
   }
 }
 .form {
@@ -1115,5 +1179,56 @@ $transitions: (
       box-shadow: none;
       transform: scale(0.9);
     }
+  }
+}
+
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 8;
+  background-color: getColor(main-solid);
+  width: 350px;
+  max-width: 100%;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2), 0px 14px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: getTransition(sudden);
+  transform: translate(-50%, -50%) scale(0.8);
+  &--active {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  &__container-info {
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    align-items: center;
+    border: 1px solid getColor(danger);
+    padding: 20px;
+    background-color: getColor(bg-danger);
+  }
+  &__icon {
+    font-size: 3.4em;
+    color: getColor(accent);
+  }
+  &__title {
+    color: getColor(accent);
+    margin-bottom: 20px;
+  }
+  &__description {
+    padding: 5px 0;
+  }
+  &__container-bts {
+    display: flex;
+    width: 220px;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
   }
 }
