--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -799,7 +799,6 @@ $transitions: (
   grid-gap: 25px;
   margin-top: 15px;
   text-align: center;
-
   &__link {
     text-decoration: none;
     transition: getTransition(smooth);
@@ -825,6 +824,7 @@ $transitions: (
     height: 100%;
     object-fit: cover;
     padding: 13px;
+    display: block;
   }
   &__plug-image {
     color: getColor(secondary);
@@ -1250,5 +1250,80 @@ $transitions: (
     align-items: center;
     justify-content: space-between;
     padding: 10px;
+  }
+}
+
+.users {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 25px;
+}
+.user-link {
+  border: 1px solid getColor(secondary);
+  position: relative;
+  padding-top: 15px;
+  border-radius: 5px;
+  transition: getTransition(smooth);
+  text-decoration: none;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1), 0px 6px 8px rgba(0, 0, 0, 0.1);
+  }
+  &__btn-delete {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 10px;
+    font-size: 1.1em;
+    background-color: white;
+    border: 1px solid getColor(secondary);
+    box-shadow: none;
+  }
+  &__container-img {
+    display: block;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 200px;
+    height: 200px;
+    border: 1px solid getColor(secondary);
+    margin: 0 auto;
+    padding: 12px;
+    margin-bottom: 15px;
+    transition: getTransition(smooth);
+    &:hover {
+      .user-link__img {
+        transform: scale(1.2);
+      }
+    }
+  }
+  &__img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: getTransition(smooth);
+    border-radius: 50%;
+    border: 1px solid getColor(secondary);
+  }
+  &__info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 0;
+    border-top: 1px solid getColor(secondary);
+
+    color: getColor(dark);
+    background-color: getColor(main);
+  }
+  &__icon {
+    border-radius: 50%;
+    border: 1px solid getColor(dark);
+    width: 23px;
+    height: 23px;
+    padding: 2px;
+  }
+  &__username {
+    margin-left: 10px;
   }
 }
