--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -754,7 +754,7 @@ $transitions: (
     overflow: hidden;
     border: 1px solid getColor(secondary);
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       z-index: 5;
       box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.1),
         0px 6px 7px rgba(0, 0, 0, 0.1);
@@ -785,10 +785,9 @@ $transitions: (
     height: 100%;
     object-fit: contain;
     border: 10px solid white;
-    border-bottom: 40px solid white;
+    border-bottom: 50px solid white;
     // filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.1));
-    background-color: getColor(main);
-    border-radius: 5px;
+    // background-color: getColor(main);
   }
 }
 
@@ -1258,6 +1257,7 @@ $transitions: (
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 25px;
+  margin-top: 15px;
 }
 .user-link {
   border: 1px solid getColor(secondary);
@@ -1268,6 +1268,7 @@ $transitions: (
   text-decoration: none;
   cursor: pointer;
   &:hover {
+    transform: scale(1.05);
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1), 0px 6px 8px rgba(0, 0, 0, 0.1);
   }
   &__btn-delete {
